<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/github_primary"
    android:padding="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/searchInputRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/backIv"
                android:background="@null"
                android:gravity="start|center"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/github_secondary"
                tools:text="Ali" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/searchLoading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchInputRel"
            app:layout_constraintVertical_bias="0.0" />


        <RelativeLayout
            android:id="@+id/userDetailsRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLoading"
            app:layout_constraintVertical_bias="0.0">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userAvatarIv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:visibility="visible"
                app:civ_border_color="@color/github_secondary"
                app:civ_border_width="0.9dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/userAvatarIv"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fullNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/github_secondary"
                    tools:text="Ali Babadi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/followersCountTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/github_secondary"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        tools:text="50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:gravity="start"
                        android:text="@string/followers"
                        android:textColor="@color/input_hint_color" />


                    <TextView
                        android:id="@+id/followingCountCountTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="start"
                        android:textColor="@color/github_secondary"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        tools:text="50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:gravity="start"
                        android:text="@string/following"
                        android:textColor="@color/input_hint_color" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/repositoriesCountTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textColor="@color/github_secondary"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        tools:text="50" />

                    <TextView
                        android:id="@+id/repositoryHintTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:gravity="start"
                        android:text="@string/repositories"
                        android:textColor="@color/input_hint_color" />


                    <TextView
                        android:id="@+id/githubPageTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="start"
                        android:text="@string/github_page"
                        android:textColor="@color/github_blue"
                        android:textSize="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/joined"
                        android:textColor="@color/input_hint_color"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/joinedDateTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:gravity="start"
                        android:textColor="@color/github_secondary"
                        android:textSize="12dp"
                        android:textStyle="italic"
                        tools:text="2022-02-13" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="start"
                        android:text="@string/lastActivity"
                        android:textColor="@color/input_hint_color"
                        android:textSize="12dp" />


                    <TextView
                        android:id="@+id/lastActivityDateTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:gravity="start"
                        android:textColor="@color/github_secondary"
                        android:textSize="12dp"
                        android:textStyle="italic"
                        tools:text="2022-02-13" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/separatorView"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginTop="16dp"
            android:background="@color/input_hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userDetailsRel"
            app:layout_constraintVertical_bias="0.0" />

        <RelativeLayout
            android:id="@+id/bioSectionRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separatorView"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/bioTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:textColor="@color/github_secondary"
                android:textStyle="italic"
                tools:text="Bio: This is a test bio text." />

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/extraInfoRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioSectionRel"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="5"
            tools:listitem="@layout/item_user_extra_info" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>